--- a/public/payment.html
+++ b/public/payment.html
@@ -269,7 +269,7 @@
 
         try {
             // Enviar pago al servidor
-            const response = await fetch('/api/process-payment', {
+            const response = await fetch('/process-payment', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
